@@ -16,13 +16,14 @@ NEWS:
 
 
 NEW: [features/improvements]
++User configuration files are now kept at standard platform locations
++Support for multiple views of the same file
 +Improved Python auto-indenter (patch from Ofer Schwarz)
 +Show auto-completion choices with Ctrl+Space (patch from Ofer Schwarz)
 +Add Paste After command (patch from Dario Ghilardi)
 +Report number of matches that were replaced in a Replace All action
 +Expand groups when doing a regular expression search and replace
 +Add (Polish, Slovenian, Latvian) translations
-+User configuration files are now kept at standard platform locations
 +New version of PyShell. Supports custom styles.
 +Middle click closes tabs (patch from craig.ds)
 +Double click empty tab area opens new tab (patch from craig.ds)
@@ -41,6 +42,7 @@ BUG FIXES:
 +Fix inaccurate highlighting of words when doing incremental whole word search
 +Fix regex not working with '^' (patch from craig.ds)
 +Fix bug in populating quick finds search history menu
++Fix bug where selecting cancel when closing a tab would not cancel the action
 
 #-----------------------------------------------------------------------------#
 
